If we end up following a CNAME chain that does not find any data return that instead of internal error.

PR:		156684
Obtained from:	NetBSD
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@292539 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f